# zephyr

./: CODEOWNERS
tests/drivers/modem/ublox_sara_n310/: CMakeLists.txt  README.rst  prj.conf  sample.yaml  testcase.yaml
tests/drivers/modem/ublox_sara_n310/boards/: mps2_an385.overlay  qemu_cortex_m0.overlay  qemu_cortex_m3.overlay  qemu_cortex_r5.overlay
tests/drivers/modem/ublox_sara_n310/src/: main.c  n310_modem_cmd_handler_mock.c  n310_modem_cmd_handler_mock.h  n310_stub.c  n310_stub.h
tests/drivers/modem/ublox_sara_n310/twister-out/: twister.csv  twister.xml  twister_discard.csv  twister_report.xml
tests/drivers/modem/ublox_sara_n310/twister-out/mps2_an385/tests/drivers/modem/ublox_sara_n310/ublox_sara-n310.maintest/: CMakeCache.txt  Makefile  cmake_install.cmake  zephyr_modules.txt
tests/drivers/modem/ublox_sara_n310/twister-out/mps2_an385/tests/drivers/modem/ublox_sara_n310/ublox_sara-n310.maintest/Kconfig/: Kconfig.modules
tests/drivers/modem/ublox_sara_n310/twister-out/mps2_an385/tests/drivers/modem/ublox_sara_n310/ublox_sara-n310.maintest/zephyr/: .cmake.dotconfig.checksum  .config  Makefile  cmake_install.cmake  dev_handles.c  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_pass_final.cmd  linker_pass_final.cmd.dep  mps2_an385.dts.pre.d  mps2_an385.dts.pre.tmp  zephyr.dts  zephyr.elf  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
tests/drivers/modem/ublox_sara_n310/twister-out/qemu_cortex_m0/tests/drivers/modem/ublox_sara_n310/ublox_sara-n310.maintest/: CMakeCache.txt  Makefile  cmake_install.cmake  zephyr_modules.txt
tests/drivers/modem/ublox_sara_n310/twister-out/qemu_cortex_m3/tests/drivers/modem/ublox_sara_n310/ublox_sara-n310.maintest/: CMakeCache.txt  Makefile  cmake_install.cmake  zephyr_settings.txt
tests/drivers/sensor/lis3dh/: CMakeLists.txt  README.rst  prj.conf  testcase.yaml
tests/drivers/sensor/lis3dh/boards/: stm32l1_disco.overlay
tests/drivers/sensor/lis3dh/src/: lis3dh_i2c_mock.c  main.c  stub.c
(+564 files in other folders)
